Modified webpack config for browserslist, fixed sidebar text alignment on different browsers

--- a/assets/editor/css/editor.css
+++ b/assets/editor/css/editor.css
@@ -132,9 +132,13 @@ body {
   margin: 0;
   padding: 12px 0;
   color: #fff;
-  text-align: center;
   cursor: pointer;
   font-size: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
 }
 
 .tool p {
